# xcp-metrics

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
devscripts/: extract-pr.sh  gen-tarball.sh  gen-vendor-tarball.sh
metrics_sample/: xcp-rrdd-xenpm
plugins/: README.md
plugins/xcp-metrics-plugin-bridge-v2/: Cargo.toml
plugins/xcp-metrics-plugin-bridge-v2/src/: main.rs
plugins/xcp-metrics-plugin-common/: Cargo.toml
plugins/xcp-metrics-plugin-common/src/: lib.rs  plugin.rs  protocol_v2.rs  run.rs
plugins/xcp-metrics-plugin-common/src/bridge/: mod.rs  v3_to_v2.rs
plugins/xcp-metrics-plugin-common/src/protocol_v3/: mod.rs  utils.rs
plugins/xcp-metrics-plugin-common/src/xenstore/: mock.rs  mod.rs  read.rs  watch.rs  watch_cache.rs  write.rs  xs.rs
plugins/xcp-metrics-plugin-procfs/: Cargo.toml
plugins/xcp-metrics-plugin-procfs/src/: main.rs
plugins/xcp-metrics-plugin-squeezed/: Cargo.toml
plugins/xcp-metrics-plugin-squeezed/src/: main.rs  rrdp-squeezed.service  test.rs  xcp-metrics-squeezed-bridge-v2.service  xcp-metrics-squeezed.service
plugins/xcp-metrics-plugin-squeezed/tests/: xcp-rrdd-squeezed
plugins/xcp-metrics-plugin-tests/: Cargo.toml
plugins/xcp-metrics-plugin-xen/: Cargo.toml
plugins/xcp-metrics-plugin-xen-v2/: Cargo.toml
plugins/xcp-metrics-plugin-xen-v2/src/: main.rs
plugins/xcp-metrics-plugin-xen-v2/src/metrics/: domain.rs  host.rs  mod.rs  physical.rs
plugins/xcp-metrics-plugin-xen/src/: domain.rs  main.rs  plugin.rs  update_once.rs
plugins/xcp-metrics-plugin-xen/src/metrics/: domain.rs  host.rs  mod.rs  physical.rs  pm.rs
plugins/xcp-metrics-plugin-xen/src/plugin/: cpu.rs  memory.rs  vcpu.rs
plugins/xcp-metrics-plugin-xenstore/: Cargo.toml
plugins/xcp-metrics-plugin-xenstore/src/: main.rs  plugin.rs
plugins/xcp-metrics-plugin-xenstore/src/plugin/: metrics.rs
plugins/xcp-metrics-plugin-xenstored/: Cargo.toml
plugins/xcp-metrics-plugin-xenstored/src/: main.rs  plugin.rs  watch_cache.rs
rrdd_metrics_sample/: xapi-stats  xcp-rrdd-mem_host  xcp-rrdd-squeezed
xapi-rs/: Cargo.toml  README.md
xapi-rs/src/: http.rs  lib.rs  unix.rs
xapi-rs/src/rpc/: message.rs  methods.rs  mod.rs  response.rs  xml.rs
xapi-rs/src/rpc/message/: error.rs  mod.rs  request.rs  response.rs  test.rs  xml.rs
xapi-rs/src/rpc/methods/: mod.rs  rrdd.rs  smapi.rs
xapi-rs/src/rpc/response/: rrdd.rs  smapi.rs
xapi-rs/src/utils/: mod.rs
xcp-metrics/: Cargo.toml  README.md
xcp-metrics-common/: Cargo.toml  README.md  build.rs
xcp-metrics-common/src/: lib.rs  metrics.rs  protocol.rs  protocol_v3.rs  test.rs  xapi.rs  xmlrpc.rs
xcp-metrics-common/src/openmetrics/: convert.rs  mod.rs  test.rs  text.rs
xcp-metrics-common/src/rpc/: message.rs  methods.rs  mod.rs  response.rs  test.rs  xml.rs
xcp-metrics-common/src/rrdd/: mod.rs  protocol_common.rs  protocol_v2.rs  rrd_updates.rs  test.rs
xcp-metrics-common/src/utils/: delta.rs  mapping.rs  mod.rs
xcp-metrics-common/src/xapi/: mod.rs
xcp-metrics-test/: Cargo.toml
xcp-metrics-test/src/: main.rs
xcp-metrics-tools/: Cargo.toml  README.md
xcp-metrics/src/: hub.rs  main.rs  mappings.rs  rpc.rs  rrdd.rs  xapi.rs
xcp-metrics/src/forwarded/: mod.rs  request.rs  response.rs  routes.rs
xcp-metrics/src/providers/: mod.rs  protocol_v2.rs  protocol_v3.rs
xcp-metrics/src/publishers/: mod.rs  openmetrics.rs  rrdd.rs
xcp-metrics/src/publishers/openmetrics/: convert.rs  mod.rs  text.rs
xcp-metrics/src/publishers/rrdd/: entry.rs  mod.rs  round_robin.rs  server.rs
xcp-metrics/src/rpc/: daemon.rs  mod.rs  rpc.rs  xapi.rs
xcp-metrics/src/rpc/routes/: deregister.rs  get_formats.rs  mod.rs  next_reading.rs  register.rs  register_v3.rs
xcp-metrics/src/rpc/xapi/: forwarded.rs  mod.rs
xcp-metrics/src/utils/: write_bridge.rs
xcp-metrics/src/xapi/: mod.rs
xcp-metrics/src/xapi/forwarded/: mod.rs
