[workspace]
package.version = "0.1.0"
package.repository = "https://github.com/xcp-ng/xcp-metrics"
package.categories = ["virtualization"]
members = [
  "xcp-metrics",
  "xcp-metrics-common",
  "xapi-rs",
  "plugins/xcp-metrics-plugin-common",
  "plugins/xcp-metrics-plugin-xen",
  "xcp-metrics-tools",
]
[profile.release]
lto = true