[workspace]
package.version = "0.1.0"
package.repository = "https://github.com/xcp-ng/xcp-metrics"
package.categories = ["virtualization"]

members = [
  "xcp-metrics",
  "xcp-metrics-common",
  #"xapi-rs",
  #"xcp-metrics-test",
  #"plugins/xcp-metrics-plugin-common",
  "plugins/xcp-metrics-plugin-xen",
  "plugins/xcp-metrics-plugin-xenstore",
  "xcp-metrics-tools",
  "external/xen",
]

[profile.release]
lto = true
