[package]
name = "xapi"
description = "XAPI utilities crate"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
anyhow = "1.0"
jsonrpc-base = "0.2.0"

http = "1.1"
http-body = "1.0"
http-body-util = "0.1"

[dependencies.serde]
version = "1.0"
features = ["std", "derive"]

[dependencies.uuid]
version = "1.10"
features = ["std", "serde"]

# XML-RPC stuff
[dependencies.dxr]
version = "0.6.3"
features = ["derive"]
default-features = false # no client/server stuff

[dependencies.quick-xml]
version = "0.30"
features = ["serialize"]

[dependencies.hyper]
version = "1.5"
features = ["client"]
optional = true

[dependencies.hyper-util]
version = "0.1"
features = ["client", "tokio"]
optional = true

[dependencies.tokio]
version = "1"
features = ["io-util", "net"]
optional = true

[dependencies.reqwest]
version = "0.12"
optional = true

[features]
default = []
http = ["reqwest"]
unix = ["tokio", "hyper", "hyper-util"]
