[package]
name = "xcp-metrics-common"
description = "Library related to xcp-metrics and rrdd"
version.workspace = true
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.3"
serde_json = "1.0"
anyhow = "1.0"
prost = "0.11"
prost-types = "0.11"
maplit = "1.0"
json5 = "0.4.1"

[dependencies.serde]
version = "1.0"
features = ["std", "derive"]

[dependencies.uuid]
version = "1.4"
features = ["std", "serde", "v4", "fast-rng"]

[dependencies.indexmap]
version = "2.0"
features = ["serde"]

[dependencies.tokio]
version = "1"
features = ["io-util"]

[build-dependencies]
prost-build = "0.11"

[features]
default = []
test = ["tokio/full"]

[dev-dependencies]
# https://github.com/rust-lang/cargo/issues/2911
xcp-metrics-common = { path = ".", features = ["test"] }

# dependency pins to ensure 1.66 compatibility
# (all are indirect dependencies, blame fast-moving ecosystem)

[dependencies.anstream]
version = "<0.5"
[dependencies.clap_builder]
version = "<4.4"
[dependencies.clap_lex]
version = "<0.5.1"
