[package]
name = "xcp-metrics-common"
description = "Library related to xcp-metrics and rrdd"
version.workspace = true
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.70" # we need only 1.66 but our deps want 1.70

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
maplit = "1.0"
smol_str = { version = "0.3", features = ["serde"] }

# xcp-metrics protocol v1
ciborium = "0.2"

[dependencies.serde]
version = "1.0"
features = ["std", "derive"]

[dependencies.uuid]
version = "1.11"
features = ["std", "serde", "v4", "fast-rng"]

[dependencies.tokio]
version = "1"
features = ["io-util"]

# OpenMetrics support
[dependencies.prost]
version = "0.13"
optional = true

[dependencies.prost-types]
version = "0.13"
optional = true

# RRDD Compatibility dependencies
[dependencies.crc32fast]
version = "1.4"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.indexmap]
version = "2.7"
features = ["serde"]
optional = true

[build-dependencies]
prost-build = { version = "0.13", optional = true }

[features]
default = []
rrdd_compat = ["dep:crc32fast", "dep:serde_json", "dep:indexmap"]
openmetrics = ["dep:prost", "dep:prost-types", "dep:prost-build"]
test = ["tokio/full"]

[dev-dependencies]
# https://github.com/rust-lang/cargo/issues/2911
xcp-metrics-common = { path = ".", features = ["test"] }
