[package]
name = "xcp-metrics-test"
version.workspace = true
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
xcp-metrics-common = { version = "*", path = "../xcp-metrics-common" }
