[package]
name = "xcp-metrics-test"
version.workspace = true
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
xcp-metrics-common = { path = "../xcp-metrics-common" }

[dependencies.serde]
version = "1.0"
features = ["std", "derive"]

[dependencies.quick-xml]
version = "0.26"
features = ["serialize"]