[package]
name = "xcp-metrics-test"
version.workspace = true
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
xcp-metrics-common = { path = "../xcp-metrics-common" }

[dependencies.serde]
workspace = true
features = ["std", "derive"]

[dependencies.quick-xml]
version = "0.30"
features = ["serialize"]
