[package]
name = "xcp-metrics-tools"
description = "Various xcp-metrics utilities"
version.workspace = true
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcp-metrics-common = { path = "../xcp-metrics-common" }
xapi = { path = "../xapi-rs" }

anyhow = "1.0"
serde_json = "1.0"

http = "1.0"
http-body = "1.0"
http-body-util = "0.1"

tokio = { version = "1", features = ["full"] }

[dependencies.hyper]
version = "1.5"
features = ["http1", "server"]

[dependencies.hyper-util]
version = "0.1"
features = ["service", "http1", "tokio"]

[dependencies.clap]
version = "4.5"
features = ["derive"]

