[package]
name = "xcp-metrics-tools"
description = "Various xcp-metrics utilities"
version.workspace = true
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcp-metrics-common = { path = "../xcp-metrics-common", features = ["rrdd_compat"] }

anyhow = { workspace = true }
serde_json = { workspace = true }

[dependencies.argh]
workspace = true
features = ["help"]

