[package]
name = "xcp-metrics"
description = "Main xcp-metrics daemon"
version.workspace = true
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcp-metrics-common = { path = "../xcp-metrics-common" }
xapi = { path = "../xapi-rs", features = ["unix"] }

http = "1.1"
http-body = "1.0"
http-body-util = "0.1"

serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
dashmap = "6.1"
tracing = "0.1"
tracing-subscriber = "0.3"
maplit = "1.0.2"

[dependencies.hyper]
version = "1.5"
features = ["http1", "server"]

[dependencies.hyper-util]
version = "0.1"
features = ["service", "http1", "tokio"]

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "net", "fs", "macros"]

[dependencies.serde]
version = "1.0"
features = ["std", "derive"]

[dependencies.uuid]
version = "1.4"
features = ["std", "serde", "v4", "fast-rng"]

[dependencies.sendfd]
version = "0.4.3"
features = ["tokio"]

[dependencies.clap]
version = "4.5"
features = ["derive"]
