[package]
name = "xcp-metrics"
description = "Main xcp-metrics daemon"
version.workspace = true
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcp-metrics-common = { path = "../xcp-metrics-common", features = [
  "openmetrics",
] }

anyhow = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "net", "fs", "macros", "sync"]

[dependencies.serde]
version = "1.0"
features = ["std", "derive"]

[dependencies.uuid]
version = "1.4"
features = ["std", "serde", "v4", "fast-rng"]

[dependencies.clap]
version = "4.5"
features = ["derive"]
