[package]
name = "xcp-metrics"
description = "Main xcp-metrics daemon"
version.workspace = true
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcp-metrics-common = { path = "../xcp-metrics-common", features = [
  "openmetrics",
] }

anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

compact_str = { workspace = true }

smol = { workspace = true }
flume = { workspace = true }

[dependencies.serde]
workspace = true
features = ["std", "derive"]

[dependencies.uuid]
workspace = true
features = ["std", "serde"]

[dependencies.argh]
workspace = true
features = ["help"]
