[package]
name = "xcp-metrics-plugin-bridge-v2"
edition = "2021"
version.workspace = true
repository.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcp-metrics-common = { path = "../../xcp-metrics-common" }
xcp-metrics-plugin-common = { path = "../xcp-metrics-plugin-common" }
xapi = { path = "../../xapi-rs" }

uuid = "1.4"
anyhow = "1.0"
fastrand = "2.0"
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"

tokio = { version = "1", features = ["full"] }

[dependencies.clap]
version = "4.3"
features = ["derive"]
