[package]
name = "xcp-metrics-plugin-tests"
description = "xcp-metrics test plugins"
version.workspace = true
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcp-metrics-common = { path = "../../xcp-metrics-common" }
xcp-metrics-plugin-common = { path = "../xcp-metrics-plugin-common" }

tokio = { version = "1", features = ["full"] }
uuid = "1.4"
anyhow = "1.0"
fastrand = "2.0"