[package]
name = "xcp-metrics-plugin-xen"
description = "Xen monitoring plugin"
version.workspace = true
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcp-metrics-common = { path = "../../xcp-metrics-common" }
xen = { path = "../../external/xen" }

anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"

uuid = "1.11"
smol_str = "0.3"
smallvec = "1.13"

enum_dispatch = "0.3"

[dependencies.clap]
version = "4.3"
features = ["derive"]
