[package]
name = "xcp-metrics-plugin-xen"
description = "Xen monitoring plugin"
version.workspace = true
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcp-metrics-common = { path = "../../xcp-metrics-common" }
xen = { path = "../../external/xen" }

anyhow = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

uuid = { workspace = true }
compact_str = { workspace = true }
smallvec = { workspace = true }

enum_dispatch = { workspace = true }

[dependencies.clap]
workspace = true
features = ["derive"]
