[package]
name = "xcp-metrics-plugin-xenstore"
edition = "2021"
version.workspace = true
repository.workspace = true
categories.workspace = true
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcp-metrics-common = { path = "../../xcp-metrics-common" }
xen = { path = "../../external/xen" }                      # for getting reliably guest uuid

compact_str = { workspace = true }
enum_dispatch = { workspace = true }

uuid = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }

smol = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

xenstore-rs = { git = "https://github.com/xcp-ng/xenstore-rs.git", branch = "generic-async", features = [
  "async-smol",
] }
radix_trie = "0.2"

[dependencies.argh]
workspace = true
features = ["help"]
