[package]
name = "xcp-metrics-plugin-xenstored"
edition = "2021"
version.workspace = true
repository.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcp-metrics-common = { path = "../../xcp-metrics-common" }
xcp-metrics-plugin-common = { path = "../xcp-metrics-plugin-common", features = ["xenstore"] }

uuid = "1.4"
anyhow = "1.0"
dashmap = "5.5"
futures = "0.3"

tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.clap]
version = "4.3"
features = ["derive"]
