[package]
name = "xcp-metrics-plugin-xenstored"
edition = "2021"
version.workspace = true
repository.workspace = true
categories.workspace = true
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcp-metrics-common = { path = "../../xcp-metrics-common" }

uuid = "1.11"
anyhow = "1.0"
futures = "0.3"
async-stream = "0.3"

tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = "0.3"

xenstore-rs = { version = "0.8", features = ["async-tokio"] }
smol_str = { version = "0.3" }
radix_trie = "0.2"
enum_dispatch = "0.3"

[dependencies.clap]
version = "4.3"
features = ["derive"]
